Fix for tooltips on occupations lesson tables

--- a/docs/lessons/occupation-arrangements.mdx
+++ b/docs/lessons/occupation-arrangements.mdx
@@ -50,90 +50,90 @@ If you are thinking of a task or a group of tasks (whether specific or not), use
 
 | English      | Hîsyêô                         | Literal Meaning                      |
 |--------------|--------------------------------|--------------------------------------|
-| Accountant   | ônî sobis munî                 | Money recorder                       |
-| Receptionist | ônî wuîtsî yê yôcno kon monodo | Maintainer of the meeting plan       |
-| Salesperson  | ônî ondô yê kôlmûdul           | Preparer of purchases                |
-| Secretary    | ônî yoldûn yê umo sonkon       | A helpful one of an important person |
-| Staff member | kukwon                         | Member / Worker                      |
-| Stockbroker  | ônî wedo yê kûngîyo xokôn      | Exchanger of company units           |
-| Merchant     | ônî wedo yê conwêbo            | Exchanger of goods                   |
+| Accountant   | <HisyeoText> ônî sobis munî                 </HisyeoText> | Money recorder                       |
+| Receptionist | <HisyeoText> ônî wuîtsî yê yôcno kon monodo </HisyeoText> | Maintainer of the meeting plan       |
+| Salesperson  | <HisyeoText> ônî ondô yê kôlmûdul           </HisyeoText> | Preparer of purchases                |
+| Secretary    | <HisyeoText> ônî yoldûn yê umo sonkon       </HisyeoText> | A helpful one of an important person |
+| Staff member | <HisyeoText> kukwon                         </HisyeoText> | Member / Worker                      |
+| Stockbroker  | <HisyeoText> ônî wedo yê kûngîyo xokôn      </HisyeoText> | Exchanger of company units           |
+| Merchant     | <HisyeoText> ônî wedo yê conwêbo            </HisyeoText> | Exchanger of goods                   |
 
 ## Industry & Trades
 
 | English            | Hîsyêô                      | Literal Meaning                |
 |--------------------|-----------------------------|--------------------------------|
-| Appliance repairer | ônî xîûfû yê culono         | Fixer of machines              |
-| Carpenter          | ônî nomû                    | The wood one                   |
-| Electrician        | ônî cingî                   | The electricity one            |
-| Engineer           | ônî ondo yê yôcno kon kôson | Preparer of construction plans |
-| Handyman           | ônî xîûfû yê niwos          | Fixer of houses                |
-| Mason              | ônî kôson dîncî             | Block builder                  |
-| Mechanic           | ônî xîûfû yê oûtô           | Fixer of cars                  |
-| Painter (House)    | ônî wêko lôngi              | Color applyer                  |
-| Plumber            | ônî wuîtsî yê môkôfo fecko  | Maintainer of liquid pipes     |
+| Appliance repairer | <HisyeoText> ônî xîûfû yê culono         </HisyeoText> | Fixer of machines              |
+| Carpenter          | <HisyeoText> ônî nomû                    </HisyeoText> | The wood one                   |
+| Electrician        | <HisyeoText> ônî cingî                   </HisyeoText> | The electricity one            |
+| Engineer           | <HisyeoText> ônî ondo yê yôcno kon kôson </HisyeoText> | Preparer of construction plans |
+| Handyman           | <HisyeoText> ônî xîûfû yê niwos          </HisyeoText> | Fixer of houses                |
+| Mason              | <HisyeoText> ônî kôson dîncî             </HisyeoText> | Block builder                  |
+| Mechanic           | <HisyeoText> ônî xîûfû yê oûtô           </HisyeoText> | Fixer of cars                  |
+| Painter (House)    | <HisyeoText> ônî wêko lôngi              </HisyeoText> | Color applyer                  |
+| Plumber            | <HisyeoText> ônî wuîtsî yê môkôfo fecko  </HisyeoText> | Maintainer of liquid pipes     |
 
 ## Learning
 
 | English     | Hîsyêô                    | Literal Meaning              |
 |-------------|---------------------------|------------------------------|
-| Editor      | ônî xîûfû yê cukto        | Fixer of text                |
-| Illustrator | ônî toswîl kon conwêbo    | Product-related drawer       |
-| Interpreter | ônî dônûxin yê kôto       | Conversion one of speech     |
-| Journalist  | ônî sobis yê sîkîn sonkon | Recorder of important events |
-| Novelist    | ônî cukto yê tômôs        | Writer of books              |
-| Student     | ônî bêûdo                 | Learner                      |
-| Teacher     | foko bêûdo                | Make-learner                 |
-| Writer      | ônî cukto                 | Writer                       |
+| Editor      | <HisyeoText> ônî xîûfû yê cukto        </HisyeoText> | Fixer of text                |
+| Illustrator | <HisyeoText> ônî toswîl kon conwêbo    </HisyeoText> | Product-related drawer       |
+| Interpreter | <HisyeoText> ônî dônûxin yê kôto       </HisyeoText> | Conversion one of speech     |
+| Journalist  | <HisyeoText> ônî sobis yê sîkîn sonkon </HisyeoText> | Recorder of important events |
+| Novelist    | <HisyeoText> ônî cukto yê tômôs        </HisyeoText> | Writer of books              |
+| Student     | <HisyeoText> ônî bêûdo                 </HisyeoText> | Learner                      |
+| Teacher     | <HisyeoText> foko bêûdo                </HisyeoText> | Make-learner                 |
+| Writer      | <HisyeoText> ônî cukto                 </HisyeoText> | Writer                       |
 
 ## Nature & Food Service
 
 | English           | Hîsyêô                    | Literal Meaning                 |
 |-------------------|---------------------------|---------------------------------|
-| Baker             | ônî bîek                  | Baker                           |
-| Butcher           | ônî ondo oksûn            | Meat preparer                   |
-| Brewer            | ônî ondo yê îskô cûbû     | Fermented drink preparer        |
-| Chef              | ônî ondo yê côûfon        | Preparer of meals               |
-| Cook              | ônî côûfon                | Cook                            |
-| Farmer            | ônî lîun yê mokon         | Nurturer/Grower of food         |
-| Pastry chef       | ônî bîek cîbon sûît       | Sweet-related Fat-related Baker |
-| Waiter / Waitress | ônî cûdo yê côûfon gubuyo | Provider of store meals         |
+| Baker             | <HisyeoText> ônî bîek                  </HisyeoText> | Baker                           |
+| Butcher           | <HisyeoText> ônî ondo oksûn            </HisyeoText> | Meat preparer                   |
+| Brewer            | <HisyeoText> ônî ondo yê îskô cûbû     </HisyeoText> | Fermented drink preparer        |
+| Chef              | <HisyeoText> ônî ondo yê côûfon        </HisyeoText> | Preparer of meals               |
+| Cook              | <HisyeoText> ônî côûfon                </HisyeoText> | Cook                            |
+| Farmer            | <HisyeoText> ônî lîun yê mokon         </HisyeoText> | Nurturer/Grower of food         |
+| Pastry chef       | <HisyeoText> ônî bîek cîbon sûît       </HisyeoText> | Sweet-related Fat-related Baker |
+| Waiter / Waitress | <HisyeoText> ônî cûdo yê côûfon gubuyo </HisyeoText> | Provider of store meals         |
 
 ## Government & Services
 
 | English        | Hîsyêô                        | Literal Meaning            |
 |----------------|-------------------------------|----------------------------|
-| Civil servant  | ônî yoldûn fîmôsyôs           | Public helping one         |
-| Diplomat       | ônî hobîyô yê yôcno bolutê    | Announcer of foreign plans |
-| Firefighter    | ônî môtô                      | The fire one               |
-| Judge          | ônî tûlokon                   | "Judger"                   |
-| Police officer | ônî cixîn                     | Enforcer                   |
-| Politician     | ônî yundôû yê gonîso fîmôsyôs | Guider of public opinion   |
-| Prosecutor     | ônî fohoso yê fûtsûn          | Examiner of law            |
-| Soldier        | ônî oklumun                   | The attack one             |
-| Mail carrier   | ônî okôt yê lufono            | Carryer of packages        |
+| Civil servant  | <HisyeoText> ônî yoldûn fîmôsyôs           </HisyeoText> | Public helping one         |
+| Diplomat       | <HisyeoText> ônî hobîyô yê yôcno bolutê    </HisyeoText> | Announcer of foreign plans |
+| Firefighter    | <HisyeoText> ônî môtô                      </HisyeoText> | The fire one               |
+| Judge          | <HisyeoText> ônî tûlokon                   </HisyeoText> | "Judger"                   |
+| Police officer | <HisyeoText> ônî cixîn                     </HisyeoText> | Enforcer                   |
+| Politician     | <HisyeoText> ônî yundôû yê gonîso fîmôsyôs </HisyeoText> | Guider of public opinion   |
+| Prosecutor     | <HisyeoText> ônî fohoso yê fûtsûn          </HisyeoText> | Examiner of law            |
+| Soldier        | <HisyeoText> ônî oklumun                   </HisyeoText> | The attack one             |
+| Mail carrier   | <HisyeoText> ônî okôt yê lufono            </HisyeoText> | Carryer of packages        |
 
 ## Homes & Real Estate
 
 | English           | Hîsyêô             | Literal Meaning             |
 |-------------------|--------------------|-----------------------------|
-| Gardener          | ônî lîun comen     | Garden grower               |
-| Maid / Cleaner    | ônî mûfêû yê niwos | The clean one of residences |
-| Real-estate agent | ônî wedo yê niwos  | Exchanger of houses         |
+| Gardener          | <HisyeoText> ônî lîun comen     </HisyeoText> | Garden grower               |
+| Maid / Cleaner    | <HisyeoText> ônî mûfêû yê niwos </HisyeoText> | The clean one of residences |
+| Real-estate agent | <HisyeoText> ônî wedo yê niwos  </HisyeoText> | Exchanger of houses         |
 
 ## Medical
 
 | English      | Hîsyêô                            | Literal Meaning               |
 |--------------|-----------------------------------|-------------------------------|
-| Patient      | ônî cîgîlsu                       | The treatment one             |
-| Dentist      | ônî cûdo yê cîgîlsu hokôlî        | Giver of tooth treatments     |
-| Doctor       | ônî cûdo yê cîgîlsu solîlo        | Giver of body treatments      |
-| Nurse        | ônî yoldûn cîgîlsu                | Treatment helpful one         |
-| Optician     | ônî cûdo yê cîgîlsu gûêyû         | Giver of eye treatment        |
-| Pharmacist   | ônî ondo cîgîlsu                  | Treatment preparer            |
-| Nutritionist | ônî cûdo yê yôcno kon mokon sohoû | Giver of healthy eating plans |
-| Psychiatrist | ônî cûdo yê cîgîlsu dûuncît       | Giver of mind treatments      |
-| Psychologist | ônî fohoso yê cîgîlsu dûuncît     | Examiner of mind treatments   |
-| Veterinarian | ônî cûdo yê cîgîlsu zonwul        | Giver of animal treatments    |
+| Patient      | <HisyeoText> ônî cîgîlsu                       </HisyeoText> | The treatment one             |
+| Dentist      | <HisyeoText> ônî cûdo yê cîgîlsu hokôlî        </HisyeoText> | Giver of tooth treatments     |
+| Doctor       | <HisyeoText> ônî cûdo yê cîgîlsu solîlo        </HisyeoText> | Giver of body treatments      |
+| Nurse        | <HisyeoText> ônî yoldûn cîgîlsu                </HisyeoText> | Treatment helpful one         |
+| Optician     | <HisyeoText> ônî cûdo yê cîgîlsu gûêyû         </HisyeoText> | Giver of eye treatment        |
+| Pharmacist   | <HisyeoText> ônî ondo cîgîlsu                  </HisyeoText> | Treatment preparer            |
+| Nutritionist | <HisyeoText> ônî cûdo yê yôcno kon mokon sohoû </HisyeoText> | Giver of healthy eating plans |
+| Psychiatrist | <HisyeoText> ônî cûdo yê cîgîlsu dûuncît       </HisyeoText> | Giver of mind treatments      |
+| Psychologist | <HisyeoText> ônî fohoso yê cîgîlsu dûuncît     </HisyeoText> | Examiner of mind treatments   |
+| Veterinarian | <HisyeoText> ônî cûdo yê cîgîlsu zonwul        </HisyeoText> | Giver of animal treatments    |
 
 ## Talking about Jobs
 
