--- a/docs/lessons/occupation-arrangements.mdx
+++ b/docs/lessons/occupation-arrangements.mdx
@@ -158,4 +158,46 @@ If you want to ask where someone works, you can skip the theme and use a locativ
     <p>¿nîmû wêloi hoî zik?&emsp;<em>Where do you work?</em></p>
 </HisyeoTabs>
 
+## Arrangements & Meetings
+
+Organizing schedules for work often involves specific verbs for meeting and planning.
+
+### Vocabulary
+
+| English               | Hîsyêô        | Literal Meaning   |
+|-----------------------|---------------|-------------------|
+| To Meet               | <HisyeoText>xe monodo    </HisyeoText> |                   |
+| Meeting / Appointment | <HisyeoText>mozulis      </HisyeoText> | (The meeting)     |
+| Plan / Arrangement    | <HisyeoText>yôcno        </HisyeoText> |                   |
+| Available / Free      | <HisyeoText>în monodo    </HisyeoText> | Meetable          |
+| Busy / Occupied       | <HisyeoText>xîyôcû       </HisyeoText> | Have plans        |
+| To Change             | <HisyeoText>xe lî êo bêsu</HisyeoText> | To make different |
+| To Cancel             | <HisyeoText>xe nîltûgu   </HisyeoText> | To stop / To end  |
+
+### Making an Appointment
+
+To ask for a meeting, you usually ask about availability (<HisyeoWord is='în'/> <HisyeoWord is='monodo'/>) or time (<HisyeoWord is='wokût'/>).
+
+<HisyeoTabs>
+    <p>nîmû li în monodo hoî lono uklo ko?&emsp;<em>Are you available tomorrow?</em></p>
+    <p>nûs kôî monodo hoî wokût zik?&emsp;<em>At what time can we meet?</em></p>
+</HisyeoTabs>
+
+### Changing & Rescheduling
+
+If plans change, use <HisyeoWord is='bêsu'/> (change) or <HisyeoWord is='ondo'/> (prepare/make) with a new time.
+
+<HisyeoTabs>
+    <p>noyo buswen xe li êo bêsu ôlê monodo nûs.&emsp;<em>I need to change our meeting.</em></p>
+    <p>nûs kôî monodo hoî lono bêsu cî?&emsp;<em>Can we meet on a different day?</em></p>
+</HisyeoTabs>
+
+### Cancelling
+
+To cancel, you "stop" (<HisyeoWord is='nîltûgu'/>) the meeting.
+
+<HisyeoTabs>
+    <p>kûu yûnlôn noyo; noyo kûu nîltûgu monodo.&emsp;<em>Forgive me (Sorry), I must cancel the meeting.</em></p>
+</HisyeoTabs>
+
 <HisyeoTooltip />
