Add a tip about standard verb objects and fix for a HTML kerning mishap

--- a/docs/lessons/shopping-for-clothes.mdx
+++ b/docs/lessons/shopping-for-clothes.mdx
@@ -49,9 +49,21 @@ The word for "clothing" is <HisyeoWord is='ôntôn'/>. It also functions as the 
     <p>noyo ôntôn solwôc.&emsp;<em>I am wearing a shirt. (Lit: I wear a top one).</em></p>
 </HisyeoTabs>
 
+:::tip Standard Verb Object
+
+When you are describing something that you would normally use the verb as the nucleus of a noun phrase, you can skip
+the repeated verb, treating the description as having an elided nucleus. If there is confusion, use <HisyeoWord is='ônî'/> as
+an [impersonal pronoun](../language/word_types/pronouns#impersonal-pronouns).
+
+<HisyeoTabs>
+    <p>noyo ôntôn ônî solwôc.</p>
+</HisyeoTabs>
+
+:::
+
 ### Garment Compounds
 
-Most specific clothing items are created by combining <HisyeoWord is='ôntôn'/> with the body part or position they cover.
+Most specific clothing items are created by combining &ensp;<HisyeoWord is='ôntôn'/> with the body part or position they cover.
 
 | English          | Hîsyêô                    | Literal Meaning          |
 |------------------|---------------------------|--------------------------|
