Fix another HTML kerning issue and remove Latin script from heading

--- a/docs/lessons/shopping-for-clothes.mdx
+++ b/docs/lessons/shopping-for-clothes.mdx
@@ -41,9 +41,9 @@ In Hîsyêô, commerce is viewed as an exchange of value rather than pure consum
 | To Pay               | <HisyeoText>cifû            </HisyeoText> | To compensate, to make good on an agreement                                         |
 | To have a cost of... | <HisyeoText>fuî wîlûwo yê</HisyeoText>    | English "to cost" îs <HisyeoWord is='nocîdo'/> <HisyeoWord is='êo'/> "to make lose" |
 
-## Clothing (ôntôn)
+## Clothing
 
-The word for "clothing" is <HisyeoWord is='ôntôn'/>. It also functions as the verb <em>to wear</em>.
+The word for "clothing" is &ensp;<HisyeoWord is='ôntôn'/>. It also functions as the verb <em>to wear</em>.
 
 <HisyeoTabs>
     <p>noyo ôntôn solwôc.&emsp;<em>I am wearing a shirt. (Lit: I wear a top one).</em></p>
