Fix examples and add intransivitiy section

--- a/docs/language/word_types/verbs.mdx
+++ b/docs/language/word_types/verbs.mdx
@@ -23,7 +23,7 @@ introduced with either <HisyeoWord is='û'/> or <HisyeoWord is='ôlê'/>).
     <p>mokon kûôxi û noyo.&emsp;<em>"A fruit was eaten by me."</em></p>
 </HisyeoTabs>
 
-:::caution Passivity
+## Passivity
 
 Hîsyêô doesn't actually have any form of passivity like in the second English
 sentence above. Verbs always introduce their object arguments. To simulate
@@ -35,7 +35,34 @@ passivity you can:
 The order of topicality is determined by the order that constituents are
 introduced into the sentence.
 
-:::
+## Intransitivity
+
+Hîsyêô verbs are fundamentally  *transitive*. When a verb appears without an
+explicit direct object, the meaning depends on the syntactic context: the **Main
+Clause** or a **Dependent Clause**.
+
+#### Main Clause: Generic Object
+
+If a verb stands alone in a main clause without an object, it implies a generic,
+indefinite, or contextual object. It effectively turns the transitive verb into
+an activity.
+
+<HisyeoTabs>
+    <p>noyo mokon.&emsp;<em>I eat (food). / I am eating.</em></p>
+    <p>nîo kôto.&emsp;<em>He speaks (words). / He is talking.</em></p>
+</HisyeoTabs>
+
+#### Dependent Clause: The Gap Strategy
+
+In relative clauses (introduced by <HisyeoWord is='xe'/> or <HisyeoWord is='fos'/>),
+the "missing" object inside the clause is understood to be the
+nucleus that the clause is modifying. This is the primary way to form relative
+clauses where the head noun is the patient/theme.
+
+<HisyeoTabs>
+    <p>kûôxi fos noyo mokon&emsp;<em>The fruit that I eat.</em>&emsp;<small>(Here, mokon has no object because kûôxi is the object)</small></p>
+    <p>tômôs fos nîo golo&emsp;<em>The book that she reads.</em></p>
+</HisyeoTabs>
 
 ## Prepositions
 
