--- a/docs/lessons/food-and-drink.mdx
+++ b/docs/lessons/food-and-drink.mdx
@@ -20,19 +20,31 @@ There are several primary verbs you will use constantly when discussing food.
 | English    | Hîsyêô | Usage Notes                                                                               |
 |------------|--------|-------------------------------------------------------------------------------------------|
 | To Eat     | <HisyeoWord is='mokon'/>  | Used for solid food.                                                                      |
-| To Drink   | <HisyeoWord is='îskô'/>   | Used for liquids. Also functions as the noun "beverage."                                  |
-| To Cook    | <HisyeoWord is='côûfon'/> | Used for the act of preparing a full meal. Also functions as the noun "meal."             |
-| To Bake    | <HisyeoWord is='bîek'/>   | Used for baking. Also functions as the noun "baked good" or "bread."                      |
+| To Drink   | <HisyeoWord is='îskô'/>   | Used for liquid food. Also functions as the noun "beverage"                                  |
+| To Cook    | <HisyeoWord is='côûfon'/> | Used for the act of preparing a full meal. Also functions as the noun "meal"             |
+| To Bake    | <HisyeoWord is='bîek'/>   | Used for the act of cooking in an oven. Also functions as the noun "baked good" or "bread." |
 | To Prepare | <HisyeoWord is='ondo'/>   | Used for preparing sub-elements or ingredients. Also functions as the noun "preparation." |
-| To Smell   | <HisyeoWord is='unon'/>   | To emit a smell (intransitive) or perceive a smell.                                       |
-| To Taste   | <HisyeoWord is='sobôlê'/> | To have a flavor (intransitive) or perceive a flavor.                                     |
+| To Smell   | <HisyeoWord is='unon'/>   | To perceive a smell. Also functionas as the noun "scent"                                       |
+| To Taste   | <HisyeoWord is='sobôlê'/> | To perceive a flavor. Also functions as the noun "flavor"                                     |
+
+:::caution Intransitivity
+
+English has its own polysemous verbs that become *intransitive* and copulative, indicating that the subject has a sensory quality which
+you would sense if using the transitive form of the verb. This is **not** how verbs work in Hîsyêô because there is no [intransivity](../language/word_types/verbs.mdx#intransivity). 
+
+<HisyeoTabs>
+    <p>noyo unon îskô hôktun ulyô ûn û ni li lôc.&emsp;<em>I smelled that milk and it is bad.</em></p>
+    <p>û îskô hôktun ulyô li lôc.&emsp;<em>That milk smells bad.</em></p>
+</HisyeoTabs>
+
+:::
 
 :::tip "Hungry" and "Thirsty"
 Hîsyêô does not have specific adjectives for "hungry" or "thirsty." Instead, you express the desire to perform the action.
 
 <HisyeoTabs>
-    <p><em>I am hungry.</em>&emsp;noyo fôlun mokon.&emsp;<small>(I want to eat.)</small></p>
-    <p><em>I am thirsty.</em>&emsp;noyo fôlun îskô.&emsp;<small>(I want to drink.)</small></p>
+    <p><em>I am hungry.</em>&emsp;noyo fôlun xe mokon.&emsp;<small>(I want to eat.)</small></p>
+    <p><em>I am thirsty.</em>&emsp;noyo fôlun xe îskô.&emsp;<small>(I want to drink.)</small></p>
 </HisyeoTabs>
 :::
 
@@ -48,7 +60,11 @@ The tools used for eating are named after the specific action they perform.
 | Fork          | <HisyeoText>ônî dûngo  </HisyeoText> | The piercing one | <HisyeoWord is='dûngo'/> (to pierce)  |
 | Knife         | <HisyeoText>ônî wêtû   </HisyeoText> | The cutting one  | <HisyeoWord is='wêtû'/> (to cut)      |
 
-**Note on Liquids:** A xolu is used for both drinks (<HisyeoWord is='îskô'/>) and soups (<HisyeoWord is='côûfon'/> <HisyeoWord is='fecko'/>, lit: liquid meal).
+:::note on Liquids
+
+A <HisyeoWord is='xolu'/> is used for both drinks (<HisyeoWord is='îskô'/>) and soups (<HisyeoWord is='côûfon'/> <HisyeoWord is='fecko'/>, lit: liquid meal).
+
+:::
 
 ## Common Foods
 
@@ -59,37 +75,36 @@ The tools used for eating are named after the specific action they perform.
 | Fruit         | <HisyeoWord is='kûôxi    '/> |
 | Vegetable     | <HisyeoWord is='ûnfûnô   '/> |
 | Meat          | <HisyeoWord is='oksûn    '/> |
+| Legumes       | <HisyeoWord is='undofôl  '/> |
+| Cereal / Grain| <HisyeoWord is='kûkmut   '/> |
+| Nut           | <HisyeoWord is='ôzîl     '/> |
 | Bread         | <HisyeoWord is='bîek     '/> |
-| Sugar / Sweet | <HisyeoWord is='cîbon    '/> |
-| Water         | <HisyeoWord is='yoûtî    '/> |
+| Pasta         | <HisyeoWord is='toliyo   '/> |
+| Fat / Grease  | <HisyeoWord is='cîbon    '/> |
+| Sugar / Sweet | <HisyeoWord is='sûît     '/> |
+| Water         | <HisyeoWord is='xîmu     '/> |
+| Herb          | <HisyeoWord is='hôncôû   '/> |
+| Spice         | <HisyeoWord is='kîûngô   '/> |
 | Alcohol       | <HisyeoWord is='îskô cûbû'/> |
 
 ### Describing Flavor & Smell
 
-Unlike simple descriptions using "is" (<HisyeoWord is='li'/>), describing the sensory experience of food uses the verbs <HisyeoWord is='sobôlê'/> (to taste) and <HisyeoWord is='unon'/> (to smell) directly.
+Unlike simple descriptions using "is" (<HisyeoWord is='li'/>), describing the sensory experience of food uses the verbs <HisyeoWord is='sobôlê'/> (to taste) and <HisyeoWord is='unon'/> (to smell) as possessed qualities (noun form).
 
 **Structure:**
 
 > [Food Subject]&emsp;+&emsp;<HisyeoWord is='fuî'/>&emsp;+&emsp;<HisyeoWord is='sobôlê'/>&emsp;+&emsp;[Adjective]&emsp;*The food has [Adjective] flavor.*
 
-| Adjective      | Hîsyêô  | Example                                              |
-|----------------|---------|------------------------------------------------------|
-| Good / Yummy   | <HisyeoWord is='xôn'/>     | <HisyeoText>û bîek sobôlê xôn.</HisyeoText> (The bread tastes yummy.)         |
-| Sweet          | <HisyeoWord is='kûkmut'/>  | <HisyeoText>kûôxi sobôlê kûkmut.</HisyeoText> (The fruit tastes sweet.)       |
-| Salty          | <HisyeoWord is='xôboî'/>   | <HisyeoText>oksûn sobôlê xôboî.</HisyeoText> (The meat tastes salty.)         |
-| Tart / Tangy   | <HisyeoWord is='mûncû'/>   | <HisyeoText>îskô sobôlê mûncû.</HisyeoText> (The drink tastes tart.)          |
-| Bitter         | <HisyeoWord is='kîkôlô'/>  | <HisyeoText>kûu sobôlê kîkôlô.</HisyeoText> (Coffee tastes bitter.)           |
-| Savory / Umami | <HisyeoWord is='ûmomî'/>   | <HisyeoText>côûfon sobôlê ûmomî.</HisyeoText> (The meal tastes savory.)       |
-| Spicy          | <HisyeoWord is='bîkontê'/> | <HisyeoText>ûnfûnô sobôlê bîkontê.</HisyeoText> (The vegetable tastes spicy.) |
-
-:::tip Smell
-The same logic applies to <HisyeoWord is='unon'/>.
-
-<HisyeoTabs>
-    <p>û bîek fuî unon xôn.&emsp;<em>The bread has a good smell.</em></p>
-</HisyeoTabs>
-
-:::
+| Adjective      | Hîsyêô                     | Example                                                                         |
+|----------------|----------------------------|---------------------------------------------------------------------------------|
+| Good / Yummy   | <HisyeoWord is='xôn'/>     | <HisyeoText>û bîek fuî sobôlê xôn.</HisyeoText> (The bread tastes yummy.)       |
+| Bad / Yucky    | <HisyeoWord is='lôc'/>     | <HisyeoText>undofôl fuî unon lôc</HisyeoText> (The beans smell yucky.)          |
+| Sweet          | <HisyeoWord is='kûkmut'/>  | <HisyeoText>kûôxi fuî sobôlê kûkmut.</HisyeoText> (The fruit tastes sweet.)     |
+| Salty          | <HisyeoWord is='xôboî'/>   | <HisyeoText>oksûn fuî sobôlê xôboî.</HisyeoText> (The meat tastes salty.)       |
+| Tart / Tangy   | <HisyeoWord is='mûncû'/>   | <HisyeoText>îskô fuî sobôlê mûncû.</HisyeoText> (The drinks taste tart.)        |
+| Bitter         | <HisyeoWord is='kîkôlô'/>  | <HisyeoText>kûu sobôlê kîkôlô.</HisyeoText> (Coffee tastes bitter.)             |
+| Savory / Umami | <HisyeoWord is='ûmomî'/>   | <HisyeoText>côûfon sobôlê ûmomî.</HisyeoText> (The meal tastes savory.)         |
+| Spicy          | <HisyeoWord is='bîkontê'/> | <HisyeoText>ûnfûnô fuî unon bîkontê.</HisyeoText> (The vegetables smell spicy.) |
 
 ## Meals of the Day
 
@@ -134,10 +149,10 @@ In Hîsyêô culture, dining is an act of shared liberty, and service is never v
 As a guest, you will primarily interact with the <HisyeoWord is='ônî'/> <HisyeoWord is='yoldûn'/> (server).
 
 #### Ordering
-To ask for something politely, use <HisyeoWord is='noyo'/> <HisyeoWord is='fôlun'/> (I want) or <HisyeoWord is='noyo'/> <HisyeoWord is='kôî'/> <HisyeoWord is='dôstoc'/> (Could I receive...). Using <HisyeoWord is='lôtfen'/> (please/polite) is highly encouraged to show respect.
+To ask for something politely, use <HisyeoWord is='noyo'/> <HisyeoWord is='fôlun'/> (I want) or an interrogative <HisyeoWord is='noyo'/> <HisyeoWord is='kôî'/> <HisyeoWord is='dôstoc'/> (Could I receive...). Using <HisyeoWord is='lôtfen'/> (please/polite) is highly encouraged to show respect.
 
 <HisyeoTabs>
-    <p>noyo fôlun kûôxi, lôtfen.&emsp;<em>I would like fruit, please.</em></p>
+    <p>noyo fôlun kûôxi lôtfen.&emsp;<em>I would like fruit, please.</em></p>
     <p>noyo kôî dôstoc yoûtî xîmu ko?&emsp;<em>Could I get some water?</em></p>
 </HisyeoTabs>
 
@@ -145,7 +160,7 @@ To ask for something politely, use <HisyeoWord is='noyo'/> <HisyeoWord is='fôlu
 When you are finished, you will need to ask for the bill.
 
 <HisyeoTabs>
-    <p>noyo kôî dôstoc zôtêstô ko?&emsp;<em>Can I get the bill/total?</em></p>
+    <p>nîmû kôî bîek mîkdol mûlû ko?&emsp;<em>Can you total the bill?</em></p>
 </HisyeoTabs>
 
 ### Chef & Server Interactions
@@ -156,14 +171,14 @@ Behind the scenes, the staff coordinates to ensure service is smooth.
 
 
 <HisyeoTabs>
-    <p><strong>Server:</strong>&emsp;côûfon mût môkwon dûî li bitûn cî?&emsp;<em>Is the meal for table two ready/finished?</em></p>
-    <p><strong>Chef:</strong>&emsp;bitûn. kûu gomî ôfo.&emsp;<em>Finished. Take this.</em></p>
+    <p><strong>Server:</strong>&emsp;¿ondo sî côûfon til mîêbil dûî ko?&emsp;<em>Is the meal for table two ready/finished?</em></p>
+    <p><strong>Chef:</strong>&emsp;ondo sî. kûu gomî ôfo.&emsp;<em>Finished. Take this.</em></p>
 </HisyeoTabs>
 
 #### Service Issues
 
 <HisyeoTabs>
-    <p><strong>Server:</strong>&emsp;môkwon niswî buswen yoûtî dîzel.&emsp;<em>Table three needs more (another) water.</em></p>
+    <p><strong>Server:</strong>&emsp;mîêbil niswî buswen eswen xîmu.&emsp;<em>Table three needs more water.</em></p>
 </HisyeoTabs>
 
 <HisyeoTooltip />
