--- a/docs/lessons/occupation-arrangements.mdx
+++ b/docs/lessons/occupation-arrangements.mdx
@@ -197,7 +197,7 @@ If plans change, use <HisyeoWord is='bêsu'/> (change) or <HisyeoWord is='ondo'/
 To cancel, you "stop" (<HisyeoWord is='nîltûgu'/>) the meeting.
 
 <HisyeoTabs>
-    <p>kûu yûnlôn noyo; noyo kûu nîltûgu monodo.&emsp;<em>Forgive me (Sorry), I must cancel the meeting.</em></p>
+    <p>kûu yûnlôn noyo; noyo kûu nîltûgu monodo onô.&emsp;<em>Forgive me (Sorry), I must cancel the meeting.</em></p>
 </HisyeoTabs>
 
 <HisyeoTooltip />
