--- a/docs/lessons/shopping-for-clothes.mdx
+++ b/docs/lessons/shopping-for-clothes.mdx
@@ -27,9 +27,9 @@ In Hîsyêô, commerce is viewed as an exchange of value rather than pure consum
 | Money        | <HisyeoText>munî         </HisyeoText> |                     | Postfix with <HisyeoWord is='xokôn'/> to provide currency amounts |
 | Price   | <HisyeoText>wîlûwo       </HisyeoText> | Value / Cost | Not an adjective, needs <HisyeoWord is='fuî'/> to associate with entities     |
 | A purchase   | <HisyeoText>kôlmûdul     </HisyeoText> |                     | Not a verb, represents the thing exchanged for                    |
-| Cheap        | <HisyeoText>wîlûwo mênûs </HisyeoText> | Deficient cost      |                                                                   |
+| Cheap        | <HisyeoText>wîlûwo bûzôk </HisyeoText> | Deficient cost      |                                                                   |
 | Expensive    | <HisyeoText>wîlûwo odigon</HisyeoText> | Excess cost         |                                                                   |
-| Taxes        | <HisyeoText>cino         </HisyeoText> | Charge / Fee / Cost |                                                                   |
+| Taxes        | <HisyeoText>cino         </HisyeoText> | Charge / Fee / Tax |                                                                   |
 
 ## The Verbs of Exchange
 
