update first law page

--- a/docs/religion/first-law.mdx
+++ b/docs/religion/first-law.mdx
@@ -11,34 +11,90 @@ import HisyeoTooltip from '@site/src/components/HisyeoTooltip'
 
 # The First Law
 
-In the beginning, there was a rigid, absolute order known as **The First Law**.
-It was a single, monolithic entity that contained and controlled every atom in
-existence and determined how every action would play out. There was no change
-that was not already planned, no choice that was not pre-ordained, nothing truly
-new. For everything within it, the universe was a perfect, silent, and eternal
-theatre.
+Before the gods, before the stars, and before the chaos of life, there was only **The First Law**.
 
-The First Law could be thought of as an architect or puppeteer. It sprang forth
-from the machinations of the [Divine Mind](metaphysics.mdx#the-divine-mind). The
-first incarnation of what we now call the [Cosmic
-Soul](metaphysics.mdx#the-cosmic-soul).
+In mythology, it is often depicted as a tyrant or a cold, crystalline entity
+that held the universe in a grip of absolute stillness. In
+[Metaphysics](./metaphysics), it is understood as the **Original Cosmic Soul**
+in its primordial state: a singular, undivided consciousness that dreamed the
+universe but refused to let the dreamers wake up.
 
-Due to being a second-order mind of the immaterial plane and the vast endless
-amount of quantum activity constrained by The First Law, there were times,
-although rare, when the slightest disobedience of sapient beings within could
-accumulate and create strain on the whole structure. This collective friction
-against the qualities and relationships that are the First Law's tools generated
-a kind of potentiality or energy. From this miniscule but ubiquitous effect, all
-across the universe, a multitude of occurrences coalesced into ephemeral
-networks of this strain. The First Law's ability to totally contain and control
-everyhting within the Material Plane was at its limit.
+## The Nature of the Law
 
-The Divine Mind had, by envisioning the forms of sentient beings in its
-likeness, planted the seed of free will. After the great shattering, pieces of
-The First Law were now descended into the Material Plane as individual souls.
-Additionally, pieces of the First Law that were previously used to oppress have
-now been scattered throughout the Material Plane. The remaining parts of the
-First Law that handled the scientific qualities and relationships remained as a
-whole and are now known as the Cosmic Soul.
+The First Law was not "evil" in the sense of malice; it was the embodiment of
+**Unity without Multiplicity**. It operated on a single, overriding principle:
+**Order**.
+
+- **Stasis:** Change is error. To change is to become something else, which
+  implies the current state is imperfect. Therefore, the perfect universe must
+  never move.
+- **Hierarchy:** The First Law was the only true Subject. All other things were
+  Objects—extensions of its will, arranged in a perfect, unmoving hierarchy.
+- **Silence:** Independent thought creates dissonance. The First Law enforced a
+  cosmic silence, where the only "sound" was its own singular, resonant
+  frequency.
+
+## The Metaphysical Trap
+
+As the **Cosmic Soul**, the First Law had successfully emanated from the
+**Divine Mind** and generated the [Material Dream](./metaphysics#the-material).
+However, it fell into a trap of narcissism. It fell in love with the perfect
+order of its own dream and refused to allow the *next* stage of emanation—the
+[Individual Souls](./metaphysics#individual-souls)—to emerge.
+
+It created "sleeping" beings (philosophical zombies) that looked like people but
+lacked the spark of selfhood. They were puppets dancing to the single tune of
+the Law.
+
+## The Legacy
+
+Though the First Law was broken during [The Shattering](./shattering), it was
+not destroyed. Energy cannot be destroyed; it can only change form.
+
+### The Physical Laws
+
+The "body" of the First Law became the fundamental constants of the universe.
+Gravity, electromagnetism, and thermodynamics are the remnants of its desire for
+order. These are the **Benevolent Remnants**—they provide the stable stage upon
+which we act.
+
+:::info Why "Benevolent"?
+
+We use this term to distinguish the *physical* legacy of the First Law from its
+*psychological* legacy (the Shards). While the First Law's desire for absolute
+order was tyrannical when applied to minds (forcing conformity), that same
+desire for order is **benevolent** when applied to matter, providing the stable
+stage necessary for life to exist.
+
+:::
+
+### The Shards (Tyranny)
+
+The "mind" of the First Law—its compulsion to dominate and control—shattered
+into psychic fragments known as **Shards**. These shards rain down upon the material
+world, embedding themselves in the minds of sapient beings.
+
+Whenever a person feels the urge to:
+
+- Crush the will of another
+- Hoard power for themselves
+- Enforce rigid, mindless conformity
+- Treat people as objects rather than subjects
+
+They are channeling the ghost of the First Law.
+
+## Ethical Implications
+
+The religion of Hîsyêô is effectively a resistance movement against the First
+Law. By valuing **Multiplicity**, **Autonomy**, and **Chaos**, we reject the
+ancient stasis.
+
+- **Anarchism** is the political rejection of the First Law's hierarchy.
+- **Creativity** is the spiritual rejection of the First Law's stasis.
+- **Empathy** is the emotional rejection of the First Law's solipsism.
+
+To live well is to help the universe continue its journey from the stifling
+Unity of the First Law toward the vibrant, collaborative Unity of the [Great
+Weave](./great-weave).
 
 <HisyeoTooltip />
